dfir_rs/tests/compile-fail/stable/surface_loop_root_defer_iteration.stderr
error: `batch` must have exactly 1 output(s), actually has 0.
 --> tests/compile-fail/stable/surface_loop_root_defer_iteration.rs:3:31
  |
3 |         source_iter(0..10) -> batch();
  |                               ^^^^^

error: `batch` must have exactly 1 input(s), actually has 0.
 --> tests/compile-fail/stable/surface_loop_root_defer_iteration.rs:5:13
  |
5 |             batch() -> defer_iteration() -> null();
  |             ^^^^^

error: Operator `defer_iteration(...)` is not allowed within a root-level `loop { ... }` context (which is fused with the tick). Use `defer_tick()` or `defer_tick_lazy()` instead.
 --> tests/compile-fail/stable/surface_loop_root_defer_iteration.rs:5:24
  |
5 |             batch() -> defer_iteration() -> null();
  |                        ^^^^^^^^^^^^^^^

error: Windowing operator `batch(...)` must be the first input operator into a `loop { ... } context.
 --> tests/compile-fail/stable/surface_loop_root_defer_iteration.rs:3:31
  |
3 |         source_iter(0..10) -> batch();
  |                               ^^^^^
